--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Calton Clemency (T) </h2>
-        <p>I'm a <span class="typed" data-typed-items="Sotware Developer, Mobile Apps Developer, Freelancer, UI/UX Designer">Computer Scientist </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Software Developer, Mobile Apps Developer, Freelancer, UI/UX Designer">Computer Scientist </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -295,18 +295,17 @@
 
             <div class="resume-item pb-0">
               <h4>Calton Tachiwona</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print
-                 marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven Developerr with 3+ years of experience designing and developing user-centered and disruptive technology products from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Southview Park, Harare</li>
+                <li>+263 783 865 400</li>
+                <li>caltonclemency@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelors (HONORS)  Degree in Computer Science </h4>
+              <h4>Bachelors of Science Honours  Degree in Computer Science </h4>
               <h5>2020 - 2024</h5>
               <p><em>Bindura University of Science Education</em></p>
               <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
